tests/negative/syntax/unfinished-program/err.expected
ERROR:
Expected the beginning of another definition at test.smol:9:1-9:3:
         8 | 
         9 | fn other() Unit {}
           | ^^
